syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "./;internalgrpc";

service Calendar {
  rpc CreateEventV1(EventV1) returns (google.protobuf.Empty);
  rpc UpdateEventV1(EventV1) returns (google.protobuf.Empty);
  rpc DeleteEventV1(EventIdV1) returns (google.protobuf.Empty);

  rpc ListEventsDayV1(EventListRequestV1) returns (EventResponseV1);
  rpc ListEventsWeekV1(EventListRequestV1) returns (EventResponseV1);
  rpc ListEventsMonthV1(EventListRequestV1) returns (EventResponseV1);
}

message EventIdV1 {
  string id = 1;
}

message EventV1 {
  string id = 1;
  string title = 2;
  optional string description = 3;
  google.protobuf.Timestamp start_at = 4;
  google.protobuf.Timestamp end_at = 5;
  string user_id = 6;
  optional uint32 remind_for = 7;
}

message EventListRequestV1 {
  string user_id = 1;
  google.protobuf.Timestamp date = 2;
}

message EventResponseV1 {
  repeated EventV1 items = 1;
}
